Fix: Update product IDs and prices in product listings for consistency

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
   <!-- JavaScript -->
   <script>
   const products = [
-    { id: 1, name: 'Avocados', price: 2.5, image: 'https://img.freepik.com/free-psd/fresh-avocado-with-water-splash-leaves-transparent-background_84443-26275.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
-    { id: 2, name: 'Tomatoes', price: 1.2, image: 'https://img.freepik.com/free-photo/fresh-red-tomatoes_2829-13449.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
-    { id: 3, name: 'Beans', price: 3.0, image: 'https://img.freepik.com/free-photo/various-legumes_53876-47070.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
-    { id: 3, name: 'maize', price: 3.0, image: 'https://img.freepik.com/free-vector/corn-cobs-realistic_1284-14091.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
-    { id: 3, name: 'Greens', price: 3.0, image: 'https://img.freepik.com/free-photo/top-view-greens-leaf-vegetables-horizontal_176474-5144.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
-    { id: 3, name: 'Bananas', price: 3.0, image: 'https://img.freepik.com/free-photo/yellow-banana-fruit_74190-4830.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
-    { id: 3, name: 'Honey', price: 3.0, image: 'https://img.freepik.com/premium-photo/honey-dipper-pouring-honey-isolated-white_88281-16.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
-    { id: 3, name: 'Potatoes', price: 3.0, image: 'https://img.freepik.com/free-photo/side-view-raw-potatoes-dish_141793-7235.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
-    { id: 3, name: 'Cassava', price: 3.0, image: 'https://img.freepik.com/premium-photo/fresh-cassava-root-isolated_259266-202.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
-  ];
+  { id: 1, name: 'Avocados', price: 2.5, image: 'https://img.freepik.com/free-psd/fresh-avocado-with-water-splash-leaves-transparent-background_84443-26275.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
+  { id: 2, name: 'Tomatoes', price: 1.2, image: 'https://img.freepik.com/free-photo/fresh-red-tomatoes_2829-13449.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
+  { id: 3, name: 'Beans', price: 3.0, image: 'https://img.freepik.com/free-photo/various-legumes_53876-47070.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
+  { id: 4, name: 'Maize', price: 3.0, image: 'https://img.freepik.com/free-vector/corn-cobs-realistic_1284-14091.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
+  { id: 5, name: 'Greens', price: 3.0, image: 'https://img.freepik.com/free-photo/top-view-greens-leaf-vegetables-horizontal_176474-5144.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
+  { id: 6, name: 'Bananas', price: 3.0, image: 'https://img.freepik.com/free-photo/yellow-banana-fruit_74190-4830.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
+  { id: 7, name: 'Honey', price: 3.0, image: 'https://img.freepik.com/premium-photo/honey-dipper-pouring-honey-isolated-white_88281-16.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
+  { id: 8, name: 'Potatoes', price: 3.0, image: 'https://img.freepik.com/free-photo/side-view-raw-potatoes-dish_141793-7235.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
+  { id: 9, name: 'Cassava', price: 3.0, image: 'https://img.freepik.com/premium-photo/fresh-cassava-root-isolated_259266-202.jpg?ga=GA1.1.785613439.1747211217&semt=ais_hybrid&w=740' },
+];
 
 
    const productList = document.getElementById('product-list');
