--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kaggia Farm - Fresh Farm Produce</title>
+  <title>Martin Mbuba - Fresh Farm Produce</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="./index.js"></script>
 </head>
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header class="bg-green-700 text-white p-4">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Kaggia Farm</h1>
+      <h1 class="text-2xl font-bold">Mbuba Farm</h1>
       <nav>
         <a href="index.html" class="mr-4 hover:underline">Home</a>
         <a href="products.html" class="mr-4 hover:underline">Products</a>
@@ -41,7 +41,7 @@
 
   <!-- Footer -->
   <footer class="bg-green-700 text-white text-center py-4">
-    <p>&copy; 2025 Kaggia Farm. All rights reserved.</p>
+    <p>&copy; 2025 Mbuba Farm. All rights reserved.</p>
   </footer>
 
   <!-- JavaScript -->
