--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>All Products - Kaggia Farm</title>
+  <title>mwenda digester solutions</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="./index.js"></script>
 </head>
@@ -32,7 +32,7 @@
 
   <!-- Footer -->
   <footer class="bg-green-700 text-white text-center py-4">
-    <p>&copy; 2025 AgriMarket. All rights reserved.</p>
+    <p>&copy; 2025 . All rights reserved.</p>
     <p>Follow us on:
       <a href="#" class="text-white hover:underline">Facebook</a>,
       <a href="#" class="text-white hover:underline">Twitter</a>,
@@ -136,7 +136,7 @@ const display = toKES(priceInUSD); // “KSh 322.00” (for example)
 
 </script>
 <footer class="bg-green-700 text-white text-center py-4">
-    <p>&copy; 2025 Kaggia Farm. All rights reserved.</p>
+    <p>&copy; 2025 Mwenda Solutions. All rights reserved.</p>
   </footer>
 
 
